# probabilidades-no-futebol-UFMG

./: .gitignore  pyproject.toml  requirements.txt
app/: main.py
app/models/: models.py
app/services/: constructors.py  selectors.py
app/utils/: config.py  data.py
